test/types/tuple/diten/underscore_is_special.good
underscore_is_special.chpl:1: syntax error: syntax error near '_'
underscore_is_special.chpl:4: syntax error: syntax error near '_'
